Fix dropdown spacing bug

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -598,7 +598,7 @@ $form-feedback-invalid-color:       theme-color("danger") !default;
 
 $dropdown-min-width:                10rem !default;
 $dropdown-padding-y:                .5rem !default;
-$dropdown-spacer:                   .125rem !default;
+$dropdown-spacer:                   0 !default;
 $dropdown-bg:                       $white !default;
 $dropdown-border-color:             rgba($black, .15) !default;
 $dropdown-border-radius:            $border-radius !default;
